[package]
name = "mysql_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["mysql"]}
# diesel = "2.0.2"
dotenvy = "0.15"
# tokio = "1.23.0"
# memoize = "0.3.3"